<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainm"
    tools:context="com.gamemobile.myapplication.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/name_main"
        android:textColor="@color/white" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tea"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="fitCenter"
            android:src="@drawable/tea_main"
            android:layout_marginTop="18dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp" />
        <ImageView
            android:id="@+id/st"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:src="@drawable/st_main"
            android:layout_marginTop="18dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/tea_main"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:text="@string/st"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imv_juice"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:scaleType="fitXY"
            android:src="@drawable/ne_main" />
        <ImageView
            android:id="@+id/imv_cf"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:src="@drawable/cafe_main"
            android:layout_alignTop="@+id/imv_juice"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp" />

    </RelativeLayout>
    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/ne_main"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:text="@string/cafe_main"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"/>
    </RelativeLayout>

</LinearLayout>
