<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainm">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/tea_main"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imv_tea_chanh"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:scaleType="fitXY"
            android:src="@drawable/tea_chanh" />
        <ImageView
            android:id="@+id/imv_tea_bee"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="18dp"
            android:scaleType="fitXY"
            android:src="@drawable/tea_matong"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/tea_chanh"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:text="@string/tea_bee"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imv_tea_tac"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/tea_tat"
            android:scaleType="fitXY"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"/>
        <ImageView
            android:id="@+id/imv_tea_gung"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/tea_gung"
            android:layout_alignParentEnd="true"
            android:scaleType="fitXY"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="18dp"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tea_tat"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginStart="18dp"/>
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:text="@string/tea_gung"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bt_them2"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="12dp"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:text="+"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</LinearLayout>