<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainm">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/cafe_main"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imv_cf_den"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:src="@drawable/coffee_menu_1" />
        <ImageView
            android:id="@+id/imv_cf_sua"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="18dp"
            android:scaleType="fitXY"
            android:src="@drawable/coffee_sua"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/cafe_den"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:text="@string/cafe_sua"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imv_cf_capuchino"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/coffee_capuchino"
            android:scaleType="fitXY"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"/>
        <ImageView
            android:id="@+id/imv_cf_bacxiu"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/coffee_sua1"
            android:layout_alignParentEnd="true"
            android:scaleType="fitXY"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="18dp"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/cafe_capuchino"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"/>
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:text="@string/cafe_bacxiu"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bt_them1"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="12dp"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:text="+"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</LinearLayout>